Remove GC specification
The switch 'UseConcMarkSweepGC' is deprecated in newer versions of the
HotSpot VM. To be compatible with upcoming releases, we simply remove
that switch.